<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string-array name="listArray">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="listValues">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <string-array name="locationList">
        <item>Paris,FR</item>
        <item>London, UK </item>
        <item>Ha Noi, VN</item>
        <item>Hồ Chí Minh,VN </item>
        <item>Đà Nẵng, VN </item>
        <item>Quảng Trị</item>
        <item>New York, US</item>
        <item>California</item>

    </string-array>

    <string-array name="locationValues">
        <item>6269531</item>
        <item>5056033</item>
        <item>1581130</item>
        <item>1566083</item>
        <item>1905468</item>
        <item>1568733</item>
        <item>5128581</item>
        <item>5332921</item>
    </string-array>

    <string-array name="diagram_entries">
        <item>Temperature</item>
        <item>Humnidity</item>
        <item>Pressure</item>
        <item>Wind Speed</item>
    </string-array>
    <string-array name="diagram_value">
        <item>4</item>
        <item>3</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="facebook_app_id">1281186041932512</string>
    <string name="app_name">Weather</string>
    <string name="detals_weather_name">Details Weather</string>
    <string name="action_bar_setting">Settings</string>
    <string name="action_bar_search">Search</string>
    <string name="settings_preference_name">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_setting_location">Location</string>
    <string name="pref_setting_location_city">Choose Location base City Name</string>
    <string name="pref_setting_temperature_type">Temperature Type</string>
    <string name="sign_up_notify_me_who_title">Hello blank fragment</string>

    <string name="setting_toolbar_title">Settings</string>
    <string name="sign_up_notify_me_who">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default">94043</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default">true</string>


    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5 -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

</resources>
