<?xml version="1.0" encoding="utf-8"?>

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.example.tm.recycleviewtest.SettingsActivity$Fragment1"
        android:icon="@drawable/art_clear"
        android:summary="@string/pref_setting_temperature_type"
        android:title="@string/pref_setting_temperature_type" />


    <header
        android:fragment="com.example.tm.recycleviewtest.SettingsActivity$Fragment1"
        android:icon="@drawable/art_clear"
        android:summary="@string/pref_setting_location_city"
        android:title="@string/pref_setting_location" />


    <header
        android:fragment="com.example.tm.recycleviewtest.SettingsActivity$Fragment1"
        android:icon="@drawable/art_clear"
        android:summary="@string/sign_up_notify_me_who"
        android:title="@string/sign_up_notify_me_who_title" />


</preference-headers>